[package]
name = "botw-wasm"
version = "0.1.0"
authors = ["Shane"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
futures = "0.3.1"
js-sys = "0.3.35"
serde = { version = "1.0.59", features = ["derive"] }
serde_bytes = "0.11"
serde-wasm-bindgen = "0.1.3"
wasm-bindgen-futures = "0.4.8"
botw-conv = { git = "https://github.com/shanepm/botw-conv" }

[dependencies.zip]
default-features = false
version = "0.5.4"
features = [
    "deflate"
]

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Blob",
    "Url"
]

[dependencies.wasm-bindgen]
version = "0.2.58"
features = ["serde-serialize"]
